Change transform approach to transform instead positioning

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Interact JS Demo</title>
   </head>
   <body>
-    <div class="container">
-      <img id="transform-image" src="https://cdn.pixabay.com/photo/2022/08/23/11/40/fox-7405603_640.png" alt="object">
+    <div class="bg">
+      <div class="resize-drag">
+        <img id="img" src="https://cdn.pixabay.com/photo/2022/08/23/11/40/fox-7405603_640.png">
+      </div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
